--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -10,6 +10,6 @@
     <ImageView
         android:layout_width="400dp"
         android:layout_height="400dp"
-        android:src="@mipmap/icon"
+        android:src="@mipmap/ic_launcher"
     />
 </LinearLayout>
